tests/NormalTests/paczka1/fuzzy1/39713017.err
Error in line 2: s4dFzm6E S726 70,8
Error in line 15: KOUgX6Qi S726 108,1
Error in line 21: s'dFzm6E S791 316,7
Error in line 7: s4dFzm6E S791 99,9
Error in line 27: OOMJkN9 A211 35,
Error in line 19: OOMJkN9 A211 48,1
Error in line 31: OOMJkN9 S791 139,24
Error in line 28: OOMJkN9 S791 96,8
